Fix ordering of list using a custom MatchComparator